# CEO

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  ruff.toml
Azure/: AzureRL.py  Instructions.md  azure_admin.py  config.json  setupvm.sh
CEO/: README.md  setup.py
CEO/gym_ceo/: __init__.py
CEO/learning/: qlearning.py  qlearning_traces.py
CEO/main/: console_game.py  many_games.py  players.json
ceo/cli/: azure_rl.py  eval_agents.py  play_qagent.py  ppo_eval_log.py  train_learning.py  train_monte_carlo.py  train_ppo.py  train_qlearning.py  train_qlearning_afterstates.py  train_qlearning_traces.py
ceo/conf/: config.yaml
ceo/envs/: __init__.py  actions.py  ceo_any_seat_env.py  ceo_player_env.py  features.py  observation.py  observation_hand.py  rl_behavior.py  seat_ceo_env.py  seat_ceo_features_env.py
ceo/game/: deck.py  eventlistener.py  game.py  hand.py  heuristicbehavior.py  passcards.py  player.py  round.py  simplebehavior.py  winlossstatistics.py
ceo/learning/: __init__.py  eval_agents.py  learning.py  learning_base.py  monte_carlo.py  play_qagent.py  ppo.py  ppo_agents.py  ppo_eval_log.py  qlearning.py  qlearning_afterstates.py  qlearning_traces.py  qtable.py  value_table.py
ceo/main/: console_game.py  many_games.py
data/: experiment_decay.json  qlearning.json  qlearning_afterstates.json  qlearning_afterstates_handsummary.json  qlearning_afterstates_values.json  qlearning_alpha_constant.json  qlearning_alpha_episode.json  qlearning_alpha_state_visit.json  qlearning_highestcard.json  qlearning_traces.json  qlearning_traces_features.json
notebooks/: .gitignore  Progress.ipynb
src/: .gitignore  requirements.txt  setup.py
(+99 files in other folders)
