[project]
name = "ceo"
version = "0.1.0"
description = "Reinforcement learning for the card game CEO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "torch>=1.13.0",
    "torchaudio>=0.13.0",
    "torchvision>=0.14.0",
    "tensorboard>=2.10.1",
    "stable_baselines3>=1.6.2",
    "statsmodels>=0.13.4",
    "azure-storage-blob>=12.9.0",
    "pytest>=7.2.0",
    "tabulate>=0.9.0",
    "ruff",
    "hydra-core>=1.3.0",
]

[dependency-groups]
dev = [
    "uv",
]

[tool.ruff]
target-version = "py313"
exclude = ["notebooks/**"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "PD",     # pandas-vet
    "NPY",    # NumPy-specific rules
    "PTH",    # use-pathlib
    "SIM212", # if-expr-with-twisted-arms
    "W",      # pycodestyle-warnings
]
ignore = [
    "PTH123", # Don't use builtin open
]

[tool.pytest.ini_options]
# Add pytest options here if needed
